[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porter-sandbox"
version = "0.1.35"
description = "Python SDK for the Porter Sandbox API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Porter", email = "support@porter.run" }]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://porter.run"
Repository = "https://github.com/porter-dev/porter-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["porter_sandbox"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["porter_sandbox"]

[[tool.mypy.overrides]]
module = "porter_sandbox._models"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
